--- a/src/shared/components/Header/Header.module.css
+++ b/src/shared/components/Header/Header.module.css
@@ -4,11 +4,11 @@
   left: 0;
   width: 100%;
   height: 4rem;
-  background-color: rgb(212, 142, 50);
+  background-color: rgb(121, 115, 209);
+  /* border-bottom: 5px solid rgb(121, 115, 209); */
   display: flex;
   align-items: center;
   justify-content: space-between;
-  
 }
 
 .link {
@@ -22,7 +22,7 @@
   text-decoration: none;
 }
 
-.navbarLinks ul{
+.navbarLinks ul {
   list-style-type: none;
   display: flex;
   padding: 2rem;
