--- a/src/cafes/components/CafeItem/CafeItem.module.css
+++ b/src/cafes/components/CafeItem/CafeItem.module.css
@@ -6,7 +6,7 @@
 
 .content {
   background-color: cadetblue;
-  width: 35%;
+  width: 100%;
   border-radius: 8px;
 }
 
@@ -24,7 +24,7 @@ h3 {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
-  margin: 0 0 1rem;
+  margin: 5rem 0 1rem;
 }
 
 .buttons {
