--- a/src/cafes/components/CafesList/CafesList.module.css
+++ b/src/cafes/components/CafesList/CafesList.module.css
@@ -1,3 +1,8 @@
 .list {
   padding-top: 6rem;
+  position: relative;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
