--- a/src/shared/components/Navigation/Navigation.module.css
+++ b/src/shared/components/Navigation/Navigation.module.css
@@ -1,18 +1,27 @@
 .header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 4rem;
-  background-color: rgb(121, 115, 209);
-  /* border-bottom: 5px solid rgb(121, 115, 209); */
+  /* background-color: rgb(121, 115, 209); */
+  background-color: transparent;
+  /* border-bottom: 1px solid white; */
+  color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 5;
 }
 
 .link {
   text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+}
+
+.link:hover {
+  color: blueviolet
 }
 
 .navbarBrand {
@@ -20,52 +29,19 @@
   align-items: center;
   padding: 2rem;
   text-decoration: none;
+
 }
 
 .navbarLinks ul {
   list-style-type: none;
   display: flex;
   padding: 2rem;
+  color: white;
+
 }
 
 .navbarLinks li {
   margin: 2rem;
+  color: white;
 }
 
-.wrap {
-  width: 30%;
-  position: absolute;
-  top: 50%;
-  left: 30%;
-  transform: translate(-50%, -50%);
-}
-
-.search {
-  all: unset;
-  width: 100%;
-  position: relative;
-  display: flex;
-}
-
-.searchBar {
-  width: 50%;
-  border: 3px solid #00b4cc;
-  border-right: none;
-  padding: 5px;
-  height: 17px;
-  border-radius: 5px 0 0 5px;
-  outline: none;
-  color: #9dbfaf;
-}
-
-.search Button {
-  width: 10px;
-  height: 32px;
-  border: 1px solid #00b4cc;
-  background: #00b4cc;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  font-size: 20px;
-  margin-top: 0;
-}
