--- a/src/shared/pages/AllCafes.module.css
+++ b/src/shared/pages/AllCafes.module.css
@@ -9,31 +9,32 @@
   border: 3px solid #00b4cc;
   border-right: none;
   padding: 5px;
-  height: 20px;
+  height: 2rem;
   border-radius: 5px 0 0 5px;
   outline: none;
+  font-size: 1.5rem;
   color: #9dbfaf;
 }
 
-.searchTerm:focus {
+/* .searchTerm:focus {
   color: #00b4cc;
-}
+} */
 
 .searchButton {
-  width: 40px;
-  height: 36px;
+  width: 3.5rem;
+  height: 2.9rem;
   border: 1px solid #00b4cc;
   background: #00b4cc;
   text-align: center;
   color: #fff;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 1.6rem;
+  padding: 0.7rem
 }
 
-/*Resize the wrap to see the search bar change!*/
 .wrap {
-  width: 35%;
+  width: 30%;
   position: absolute;
   top: 20%;
   left: 50%;
