--- a/src/shared/pages/HomePage.module.css
+++ b/src/shared/pages/HomePage.module.css
@@ -1,3 +1,12 @@
 .home {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+
+.homeText {
   padding: 20rem;
+  position: relative;
+  opacity: 1;
 }
