--- a/src/cafes/components/CafesList/CafesList.module.css
+++ b/src/cafes/components/CafesList/CafesList.module.css
@@ -1,7 +1,8 @@
 .list {
-  padding-top: 6rem;
+  margin-top: 2rem;
+  margin-left: 17rem;
   position: relative;
-  width: 60%;
+  width: 85%;
   display: flex;
   flex-direction: column;
   align-items: center;
