--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url('./shared/fonts/Founders_Grotesk_Bold.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Bold_Italic.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Light.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Light_Italic.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Medium.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Medium_Italic.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Regular.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Regular_Italic.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Semibold.otf') format('opentype'),
+    url('./shared/fonts/Founders_Grotesk_Semibold_Italic.otf')
+      format('opentype');
 }
 
-body:before{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Founders Grotesk'; */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body:before {
   content: '';
   position: fixed;
   left: 0;
   top: 0;
-  background: url('./shared/pics/3.jfif');
+  background: url('./shared/pics/remote.jpg');
   background-size: cover;
-  opacity: 0.8;
+  opacity: 0.7;
   height: 100%;
   width: 100%;
 }
 
-body:after{
+/* body:after {
   position: relative;
-}
-
+} */
