--- a/src/shared/components/Button/Button.module.css
+++ b/src/shared/components/Button/Button.module.css
@@ -1,13 +1,15 @@
 .button {
-  font: inherit;
+  border: none;
   padding: 0.5rem 1.5rem;
-  border-radius: 4px;
-  background: #bd476e;
+  border-radius: 10px;
+  background: #fe8df2;
   color: white;
-  width: 10rem;
-  text-decoration: none;
+  width: 9rem;
   display: inline-block;
-  margin-top: 1rem;
+  margin: 1rem;
+  font-size: 0.85rem;
+  font-family: 'Poppins';
+  font-weight: normal;
 }
 
 .button:hover {
@@ -16,5 +18,6 @@
 
 .button:disabled {
   cursor: not-allowed;
-  background: #555960;
+  background: #fe8df2;
+  opacity: 0.7;
 }
