--- a/src/shared/components/Navigation/Navigation.module.css
+++ b/src/shared/components/Navigation/Navigation.module.css
@@ -2,46 +2,37 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 4rem;
-  /* background-color: rgb(121, 115, 209); */
-  background-color: transparent;
-  /* border-bottom: 1px solid white; */
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  z-index: 5;
+  width: 18.1rem;
+  height: 100%;
+  text-align: right;
+  background-color: #005dff;
 }
 
 .link {
   text-decoration: none;
-  color: white;
-  font-size: 1.5rem;
+  color: #fe8df2;
+  font-size: 1.2rem;
+  font-weight: normal;
 }
 
-.link:hover {
-  color: blueviolet
-}
-
-.navbarBrand {
-  float: left;
-  align-items: center;
-  padding: 2rem;
+.navbarBrand,
+.navbarLinks {
+  margin: 1.5rem 0.5rem 0 0;
   text-decoration: none;
-
+  text-shadow: 1px 1px grey;
 }
 
-.navbarLinks ul {
+.navbarLinks .link {
+  text-shadow: 1px 1px grey;
+  font-weight: bold;
+}
+
+.navbarLinks ul,
+.auth ul {
   list-style-type: none;
-  display: flex;
-  padding: 2rem;
-  color: white;
-
 }
 
-.navbarLinks li {
-  margin: 2rem;
-  color: white;
+.auth {
+  margin: 280% 0.5rem 0 0;
+  text-shadow: 1px 1px grey;
 }
-
