--- a/src/shared/pages/AllCafes.module.css
+++ b/src/shared/pages/AllCafes.module.css
@@ -1,12 +1,18 @@
-.search {
-  width: 100%;
+.citySearchForm {
+  height: 0;
+  width: 0;
   position: relative;
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10rem;
+  margin-left: 20rem;
 }
 
+/*
 .searchTerm {
   width: 100%;
-  border: 3px solid #00b4cc;
+  border: 4px solid #00b4cc;
   border-right: none;
   padding: 5px;
   height: 2rem;
@@ -16,13 +22,9 @@
   color: #9dbfaf;
 }
 
-/* .searchTerm:focus {
-  color: #00b4cc;
-} */
-
 .searchButton {
   width: 3.5rem;
-  height: 2.9rem;
+  height: 3.1rem;
   border: 1px solid #00b4cc;
   background: #00b4cc;
   text-align: center;
@@ -30,16 +32,16 @@
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 1.6rem;
-  padding: 0.7rem
+  padding: 0.7rem;
 }
 
 .wrap {
-  width: 30%;
+  width: 60%;
   position: absolute;
-  top: 20%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
+} */
 
 .cafes {
   display: flex;
