--- a/src/shared/pages/HomePage.module.css
+++ b/src/shared/pages/HomePage.module.css
@@ -1,12 +1,16 @@
 .home {
-  position: relative;
   width: 100%;
   height: 100%;
 }
 
-
 .homeText {
-  padding: 20rem;
+  margin: 20rem 6rem;
   position: relative;
-  opacity: 1;
+  color: #fe8df2;
+  text-shadow: 1px 1px grey;
+  font-size: 1.4rem;
+}
+
+.homeText h1 {
+  font-weight: bold;
 }
