--- a/src/shared/components/Navigation/Navigation.module.css
+++ b/src/shared/components/Navigation/Navigation.module.css
@@ -6,6 +6,9 @@
   height: 100%;
   text-align: right;
   background-color: #005dff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .link {
@@ -15,7 +18,7 @@
   font-weight: normal;
 }
 
-.navbarBrand,
+.navbarList,
 .navbarLinks {
   margin: 1.5rem 0.5rem 0 0;
   text-decoration: none;
@@ -33,6 +36,6 @@
 }
 
 .auth {
-  margin: 280% 0.5rem 0 0;
+  margin-right: 0.5rem;
   text-shadow: 1px 1px grey;
 }
