--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,8 @@
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  /* font-family: 'Founders Grotesk'; */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 body:before {
@@ -31,10 +30,27 @@ body:before {
   background: url('./shared/pics/remote.jpg');
   background-size: cover;
   opacity: 0.7;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
-/* body:after {
-  position: relative;
-} */
+@media only screen and (max-width: 68.75em) {
+  html,
+  body {
+    font-size: 85%;
+  }
+}
+
+@media only screen and (max-width: 56.25em) {
+  html,
+  body {
+    font-size: 75%;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  html,
+  body {
+    font-size: 65%;
+  }
+}
