--- a/src/shared/components/Button/Button.module.css
+++ b/src/shared/components/Button/Button.module.css
@@ -21,3 +21,9 @@
   background: #fe8df2;
   opacity: 0.7;
 }
+
+@media only screen and (max-width: 37.5em) {
+  .button {
+    font-size: 0.92rem;
+  }
+}
