--- a/src/shared/components/Forms/Form.module.css
+++ b/src/shared/components/Forms/Form.module.css
@@ -1,16 +1,32 @@
-form {
-  width: 22%;
-  height: 77%;
+.form {
+  width: 25rem;
+  height: 100vh;
   margin-left: 18rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: center;
   position: absolute;
   background-color: #005dff;
-  padding-top: 13.5rem;
 }
 
-.form Button {
-  margin-top: 5rem;
+/* .form Button {
+  margin-top: 3rem;
   margin-left: 0;
+} */
+
+@media only screen and (max-width: 37.5em) {
+  .form {
+    width: 60%;
+    height: 40vh;
+    margin: 15rem 12%;
+    padding: 3rem;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+  }
+
+  .form Button {
+    margin-top: 3rem;
+    margin-left: 0;
+  }
 }
