--- a/src/shared/components/Map/Map.module.css
+++ b/src/shared/components/Map/Map.module.css
@@ -2,3 +2,17 @@
   width: 100%;
   height: 180%;
 }
+
+@media only screen and (max-width: 56.25em) {
+  .map {
+    /* width: 100%; */
+    /* height: 190%; */
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .map {
+    /* width: 100%; */
+    /* height: 220%; */
+  }
+}
