--- a/src/shared/components/Modal/Modal.module.css
+++ b/src/shared/components/Modal/Modal.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   background: rgba(0, 0, 0, 0.9);
   z-index: 10;
 }
@@ -12,9 +12,9 @@
   z-index: 100;
   position: fixed;
   top: 22vh;
-  left: 17%;
-  width: 84%;
-  height: 20%;
+  left: 30%;
+  width: 40%;
+  height: 60%;
   border-radius: 8px;
   color: white;
   background-color: #005dff;
@@ -22,6 +22,7 @@
 
 .modalHeader {
   padding: 0.3rem 0 0 1rem;
+  border-radius: 8px;
   background-color: #005dff;
   color: #fe8df2;
   text-align: left;
@@ -32,9 +33,17 @@
   padding: 0 0 0 1rem;
 }
 
-/* @media (min-width: 768px) {
-    .modal {
-        left: calc(50% - 20rem);
-        width: 40rem;
-    }
-} */
+@media only screen and (max-width: 56.25em) {
+  .modal {
+    left: 15%;
+    width: 72%;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .modal {
+    left: 10%;
+    width: 81%;
+    font-size: 0.75rem;
+  }
+}
