--- a/src/shared/pages/HomePage.module.css
+++ b/src/shared/pages/HomePage.module.css
@@ -1,11 +1,13 @@
 .home {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 .homeText {
-  margin: 20rem 6rem;
-  position: relative;
+  /* margin: 20rem 6rem; */
+  position: absolute;
+  top: 32%;
+  left: 5%;
   color: #fe8df2;
   text-shadow: 1px 1px grey;
   font-size: 1.4rem;
@@ -13,4 +15,52 @@
 
 .homeText h1 {
   font-weight: bold;
+}
+
+.homeTextFirst {
+  animation: moveInTop 1.5s ease-in-out;
+}
+
+.homeTextSecond {
+  animation: moveInRight 1.5s ease-in-out;
+}
+
+.homeTextThird {
+  animation: moveInBottom 1.5s ease-in-out;
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(2rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
